--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@hookform/resolvers": "^3.6.0",
     "@internationalized/date": "^3.5.4",
     "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-select": "^2.0.0",
@@ -31,6 +31,7 @@
     "react-hook-form": "^7.52.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.23.1",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8",
